--- a/Vishop/Vishop.csproj
+++ b/Vishop/Vishop.csproj
@@ -244,6 +244,10 @@
     <Compile Include="Migrations\201706081251368_setGenreToMovie.Designer.cs">
       <DependentUpon>201706081251368_setGenreToMovie.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706151219286_UpdateFieldsSignature.cs" />
+    <Compile Include="Migrations\201706151219286_UpdateFieldsSignature.Designer.cs">
+      <DependentUpon>201706151219286_UpdateFieldsSignature.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -251,6 +255,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -380,6 +385,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706081251368_setGenreToMovie.resx">
       <DependentUpon>201706081251368_setGenreToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706151219286_UpdateFieldsSignature.resx">
+      <DependentUpon>201706151219286_UpdateFieldsSignature.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
